# pokemonle-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  diesel.toml
.github/: dependabot.yaml
.github/workflows/: build.yml
migrations/: 20250501063857_create_generations_and_languages.down.sql  20250501063857_create_generations_and_languages.up.sql  20250501064739_create_abilities_and_growth.up.sql  20250501064920_create_pokemon_colors_chapes_and_habitat.up.sql  20250501065619_create_evolution.down.sql  20250501065619_create_evolution.up.sql  20250501070035_create_pokemon_with_species.down.sql  20250501070035_create_pokemon_with_species.up.sql  20250501070312_create_locations_regions_and_gender.down.sql  20250501071318_create_pokemon_evolution.up.sql  20250504041926_create_pokemon_relations.down.sql  20250504041926_create_pokemon_relations.up.sql  20250505045032_create_berry.up.sql  20250505061118_create_encounter.up.sql  20250509065336_create_move.up.sql  20250509151037_create_locale_tables.up.sql  20250514025904_create_pokemon_moves.down.sql
migrations/2025-05-01-063857_create_generations_and_languages/: down.sql  up.sql
migrations/2025-05-01-064210_create_versions_and_groups/: down.sql  up.sql
migrations/2025-05-01-064437_create_types/: down.sql  up.sql
migrations/2025-05-01-064739_create_abilities_and_growth/: down.sql
migrations/2025-05-01-064920_create_pokemon_colors_chapes_and_habitat/: down.sql
migrations/2025-05-01-065042_create_items/: down.sql  up.sql
migrations/2025-05-01-070312_create_locations_regions_and_gender/: down.sql  up.sql
migrations/2025-05-01-071318_create_pokemon_evolution/: down.sql
migrations/2025-05-05-045032_create_berry/: down.sql  up.sql
migrations/2025-05-05-051400_create_contest/: down.sql  up.sql
migrations/2025-05-05-061118_create_encounter/: down.sql  up.sql
migrations/2025-05-05-114248_create_pokedex/: down.sql  up.sql
migrations/2025-05-09-065336_create_move/: down.sql  up.sql
migrations/2025-05-09-151037_create_locale_tables/: down.sql  up.sql
migrations/2025-05-13-050216_create_flavor_text/: down.sql
pokemonle-api/: Cargo.toml  build.rs
pokemonle-api/src/: error.rs  main.rs
pokemonle-api/src/v1/: ability.rs  evo.rs  item.rs  language.rs  mod.rs  move.rs  param.rs  pokemon.rs  router.rs
pokemonle-api/src/v1/contest/: mod.rs
pokemonle-api/src/v1/location/: mod.rs  region.rs
pokemonle-crypto/: Cargo.toml
pokemonle-crypto/src/: aes_gcm.rs  chacha20_poly1305.rs  error.rs  lib.rs
pokemonle-derive/: Cargo.toml
pokemonle-derive/src/: lib.rs
pokemonle-http/: Cargo.toml
pokemonle-http/src/: docs.rs  error.rs  main.rs
pokemonle-http/src/v1/: ability.rs  game.rs  language.rs  mod.rs  openapi.rs  pokemon.rs  resource.rs  response.rs  router.rs  version.rs  version_group.rs
pokemonle-lib/: Cargo.toml
pokemonle-lib/src/: config.rs  crypto.rs  error.rs  lib.rs  macros.rs
pokemonle-lib/src/database/: ability.rs  connection.rs  evo.rs  language.rs  mod.rs  move.rs  pagination.rs  pokemon.rs  schema.rs  trait.rs  version.rs
pokemonle-lib/src/database/entity/: abilities.rs  ability_flavor_text.rs  ability_names.rs  berries.rs  berry_firmness.rs  berry_firmness_names.rs  contest_effects.rs  contest_types.rs  egg_groups.rs  encounter_condition_value_map.rs  encounter_condition_values.rs  encounter_conditions.rs  encounter_methods.rs  encounter_slots.rs  encounters.rs  evolution_chains.rs  evolution_triggers.rs  genders.rs  generation_names.rs  generations.rs  growth_rates.rs  item_categories.rs  item_flavor_text.rs  item_fling_effects.rs  item_names.rs  item_pocket_names.rs  item_pockets.rs  items.rs  language_names.rs  languages.rs  location_area_encounter_rates.rs  location_areas.rs  location_names.rs  locations.rs  mod.rs  move_damage_classes.rs  move_effects.rs  move_flavor_text.rs  move_names.rs  move_targets.rs  (+28 more)
pokemonle-lib/src/database/entry/: abilities.rs  ability_flavor_text.rs  ability_names.rs  berries.rs  berry_firmness.rs  berry_firmness_names.rs  contest_types.rs  encounter_condition_values.rs  encounter_conditions.rs  encounter_slots.rs  encounters.rs  evolution_triggers.rs  generation_names.rs  item_pocket_names.rs  language_names.rs  languages.rs  location_areas.rs  location_names.rs  move_effects.rs  move_flavor_text.rs  moves.rs  pokemon_abilities.rs  pokemon_color_names.rs  pokemon_evolution.rs  pokemon_move_methods.rs  pokemon_shapes.rs  pokemon_species_names.rs  pokemon_types.rs  region_names.rs  regions.rs  stats.rs  version_group_names.rs
pokemonle-lib/src/database/handler/: ability.rs  berry.rs  contest.rs  encounter.rs  evolution.rs  generation.rs  item.rs  language.rs  location.rs  mod.rs  move.rs  pokemon.rs  region.rs  type.rs  version.rs  version_group.rs
pokemonle-lib/src/model/: berry.rs  encounter.rs  evo.rs  item.rs  location.rs  mod.rs  move.rs  pokemon.rs
pokemonle-lib/src/types/: mod.rs  param.rs  prelude.rs  request.rs  response.rs
pokemonle-trait/: Cargo.toml
pokemonle-trait/src/: lib.rs
