[workspace]
resolver = "2"
members = ["pokemonle-api", "pokemonle-lib", "pokemonle-trait"]

[workspace.metadata]
authors = []

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
schemars = { version = "0.8", features = ["derive"] }
[workspace.dependencies.aide]
version = "^0.14"
features = ["axum", "axum-json", "axum-query", "scalar", "macros"]
