[package]
name = "pokemonle-lib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
pokemonle-trait = { path = "../pokemonle-trait" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "^1.1.0", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "with-json",
    "macros",
] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "^0.15.0"
schemars = { version = "0.8", features = ["derive"] }
aide = { version = "^0.14", features = ["macros"] }
async-trait = "0.1"
