[package]
name = "pokemonle-lib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
pokemonle-trait = { path = "../pokemonle-trait" }
aide.workspace = true
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
sqlx = { version = "0.8", features = ["migrate", "sqlite"] }
sea-orm = { version = "^1.1.12", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "with-json",
    "macros",
] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy = "^0.15.0"
schemars.workspace = true
